Cleanup & refactor. Split pipeline into workers. Add README. Add specs. Add Travis.
Cleanup & refactor.
Split pipeline into workers.
Add README.
Add specs.
Add Travis.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,11 +4,45 @@ LineLength:
 HashSyntax:
   EnforcedStyle: ruby19
 
-SingleSpaceBeforeFirstArg:
+Style/SpaceBeforeFirstArg:
   Enabled: false
 
-TrailingComma:
+Style/TrailingCommaInLiteral:
   Enabled: false
+
+Style/TrailingCommaInArguments:
+  Enabled: false
+
+Style/Documentation:
+  Enabled: false
+
+Style/MultilineBlockChain:
+  Disabled: true
+
+Metrics/CyclomaticComplexity:
+  Max: 20
+
+Metrics/AbcSize:
+  Enabled: false
+
+Metrics/MethodLength:
+  Max: 25
+
+Style/MultilineBlockChain:
+  Enabled: false
+
+Style/MultilineMethodCallIndentation:
+  Enabled: false
+
+Metrics/PerceivedComplexity:
+  Enabled: false
+
+Metrics/MethodLength:
+  Enabled: false
+
+Style/ZeroLengthPredicate:
+  Enabled: false
+
 AllCops:
   Exclude:
     - '*.gemspec'
